--- a/notebooks/Entendendo_a_API.ipynb
+++ b/notebooks/Entendendo_a_API.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# http://servicos.cptec.inpe.br/XML/#req-busca-localidade"
+    "# http://servicos.cptec.inpe.br/XML/#req-busca-localidade\n",
+    "\n",
+    "Hi lorena!"
    ]
   }
  ],
